--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -16,6 +16,7 @@ cycler==0.11.0
 cymem==2.0.6
 decorator==5.1.1
 docx2txt==0.8
+docxtpl==0.16.7
 entrypoints==0.4
 fonttools==4.37.2
 future==0.18.2
