--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -37,6 +37,7 @@ matplotlib==3.5.3
 murmurhash==1.0.8
 nltk==3.7
 numpy==1.23.2
+opencage==2.1.0
 packaging==21.3
 pafy==0.5.5
 pandas==1.4.4
@@ -92,3 +93,5 @@ validators==0.20.0
 wasabi==0.10.1
 watchdog==2.1.9
 zipp==3.8.1
+
+
